vlib/v/parser/tests/interface_mutability_receiver.out
vlib/v/parser/tests/interface_mutability_receiver.vv:23:18: error: `Dog` incorrectly implements method `set_name` of interface `Animal`: expected `Animal` which is immutable, not `mut &Dog`
   21 |     dog := Dog{'Doggo'}
   22 |     println(dog.name)
   23 |     set_animal_name(dog, 'Pupper')
      |                     ~~~
   24 |     println(dog.name)
   25 | }
Details: main.Animal has `set_name(name string)`
